[build-system]
requires = ["hatchling==1.25.0"]
build-backend = "hatchling.build"

[project]
name = "railway-hermes-watchdog"
version = "0.1.0"
description = "Secret-safe watchdog for Railway services and Hermes gateways"
requires-python = ">=3.12"
license = { text = "MIT" }
# HTTP client with explicit connect/read timeouts and an injectable transport
# (used for deterministic, network-free tests). Tightly pinned.
dependencies = [
    "httpx==0.28.1",
]

[project.scripts]
watchdog = "watchdog.cli:main"

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
    "ruff==0.9.2",
    "mypy==1.14.1",
    "PyYAML==6.0.2",
    "types-PyYAML==6.0.12.20241230",
]

[tool.hatch.build.targets.wheel]
packages = ["src/watchdog"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
branch = true
source = ["watchdog"]

[tool.coverage.report]
show_missing = true
# Phase-1 floor; raised as behavior lands in later phases.
fail_under = 90

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S", "RUF"]
# S101 (assert) is fine in tests.

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
files = ["src", "tests"]

# Product code is strictly typed. Tests stay type-checked but are not held to
# strict untyped-def rules, so pytest fixtures need no ceremony annotations.
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_decorators = false
disallow_untyped_calls = false
disallow_any_generics = false
warn_return_any = false
